added some more code

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       </nav>
       <header>
         <div class="row">
-          <div>
+          <div class="home__description">
             <h1>Best Place to Learn Frontend</h1>
             <p class="subheader">
               Go from being an abosulte beginner to pro with simplified pro.
             </p>
-            <button>Start now</button>
+            <button class="home__description--button">Start now</button>
           </div>
           <figure>
             <img src="/assets/HTML Practise Assets/laptop.png" alt="" />
@@ -40,7 +40,7 @@
         <div class="row">
           <div class="section__description">
             <div class="section__description-wrapper">
-              <p class="section_description--para">
+              <p class="section__description--para">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Dolorem facere, asperiores minima itaque, quae fuga eveniet
                 accusantium, qui facilis quam nulla minus voluptatum
@@ -62,13 +62,13 @@
         <div class="row">
           <div class="section__description">
             <div class="section__description-wrapper">
-              <p class="section_description--para">
+              <p class="section__description--para">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
                 sapiente magni velit itaque. Consectetur, ab. Porro, repellendus
                 accusantium! Inventore quod eaque autem enim quo, repellendus
                 sed obcaecati eius reiciendis ullam.
               </p>
-              <p class="section_description--para">
+              <p class="section__description--para">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero
                 voluptatem quos animi neque vel ea accusantium sunt hic aperiam
                 consectetur, quis veniam voluptate amet rem! Vero vitae minus
